# SnakeGameGL

./: CMakeLists.txt  README.md  vcpkg.json
SnakeGame/: Board.cpp  Board.h  BodyPart.cpp  BodyPart.h  CMakeLists.txt  Fruit.cpp  Fruit.h  GameSettings.h  GameSystem.cpp  GameSystem.h  Head.cpp  Head.h  SnakeGame.vcxproj  SnakeGame.vcxproj.filters  Tail.cpp  Tail.h  main.cpp
assets/shaders/: frag.frag.txt  vert.vert.txt
engine/: CMakeLists.txt  Camera2D.cpp  Camera2D.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  TextureCache.cpp  TextureCache.h  Timing.cpp  Timing.h  Vertex.h  Window.cpp  Window.h  engine.cpp  engine.h  engine.vcxproj  engine.vcxproj.filters  picoPNG.cpp  picoPNG.h
